--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,6 +24,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
 
+    - name: install
+      run: npm ci
+
     - name: lint
       run: npm run lint
 
