--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,5 +35,11 @@ jobs:
     - name: lint
       run: npm run lint
 
+    - name: unit test
+      run:  npm run test:unit
+
     - name: build
       run:  npm run build
+
+    - name: build/electron
+      run:  npm run electron:build
