--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,6 @@ jobs:
       run:  npm run build
 
     - name: build/electron
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run:  npm run electron:build
