--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,6 @@ jobs:
     - name: build/electron
       env:
         GH_TOKEN: ${{ secrets.GH_TOKEN }}
-      run:  npm run electron:build
+      run: |
+        echo ${GH_TOKEN}
+        npm run electron:build
