--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^7.12.0",
     "vue": "^2.6.11",
+    "vuefire": "^2.2.2",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
@@ -34,6 +36,7 @@
     "skyway-js": "^4.3.0",
     "spectron": "11.0.0",
     "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
+    "vue-cli-plugin-vuefire": "~1.0.2",
     "vue-cli-plugin-vuetify": "~2.0.9",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
