--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
       run:  npm run build
 
     - name: build/electron
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
-        echo ${GH_TOKEN}
         npm run electron:build
