--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,9 @@
 # generate from https://webrtc.ecl.ntt.com/
-export VUE_APP_SKYWAY_APIKEY=''
+VUE_APP_SKYWAY_APIKEY=''
+VUE_APP_APIKEY=
+VUE_APP_AUTH_DOMAIN=
+VUE_APP_PROJECT_ID=
+VUE_APP_STORAGE_BUCKET=
+VUE_APP_MESSAGING_SENDER_ID=
+VUE_APP_APP_ID=
+VUE_APP_MEASUREMENT_ID=
