--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "firebase": "firebase",
+    "firebase:emulate": "firebase emulators:start",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "serve:withfirebase": "run-p serve firebase:emulate",
+    "electron:serve:withfirebase": "run-p firebase:emulate electron:serve"
   },
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
-    "firebase": "^7.12.0",
     "vue": "^2.6.11",
     "vuefire": "^2.2.2",
     "vuetify": "^2.2.11"
@@ -32,7 +34,9 @@
     "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "firebase": "^8.2.5",
     "firebase-tools": "^9.3.0",
+    "npm-run-all": "^4.1.5",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "skyway-js": "^4.3.0",
