--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "vue-cli-service build",
     "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "firebase": "firebase",
-    "firebase:emulate": "firebase emulators:start",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
+    "electron:serve:withfirebase": "run-p firebase:emulate electron:serve",
+    "firebase": "firebase",
+    "firebase:emulate": "firebase emulators:start",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
-    "serve:withfirebase": "run-p serve firebase:emulate",
-    "electron:serve:withfirebase": "run-p firebase:emulate electron:serve"
+    "serve:withfirebase": "run-p serve firebase:emulate"
   },
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
     "vuefire": "^2.2.2",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "^4.5.11",
     "@vue/cli-plugin-unit-jest": "^4.5.11",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.0.3",
@@ -36,6 +38,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "firebase": "^8.2.5",
     "firebase-tools": "^9.3.0",
+    "firebaseui": "^4.7.3",
     "npm-run-all": "^4.1.5",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
