--- a/firebase.json
+++ b/firebase.json
@@ -1,22 +1,13 @@
 {
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
-  "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+  "database": {
+    "rules": "database.rules.json"
   },
   "emulators": {
     "auth": {
       "port": 9099
     },
-    "functions": {
-      "port": 5001
-    },
-    "firestore": {
-      "port": 8085
+    "database": {
+      "port": 9000
     },
     "ui": {
       "enabled": true
